domain center content template html/css and collapsing, and smooth animations

--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
             <li class="crumb-active">
               <a href="dashboard.html">Domains</a>
             </li>
-            <li class="crumb-trail">Manage and deploy campaigns to all of your domains</li>
+            <li class="crumb-trail">Manage your domains, campaigns, and landers</li>
           </ol>
         </div>
       <!--   <div class="topbar-right">
@@ -239,101 +239,98 @@
 
 
       <!-- Begin: Content -->
-      <section id="content" class="">
-
+      <section id="content">
         <!-- Demo Content: Center Column Text -->
         <div class="ph10">
-          <div class="dd" id="nestable-contextual">
-                <ol class="dd-list">
-                  <li class="dd-item dd-primary" data-id="13">
-                    <div class="dd-handle">LifeStyle
-                      <span class="pull-right fs11 fw600">Approved</span>
-                    </div>
-                    <ol class="dd-list pb15">
-                      <li class="dd-item" data-id="14">
-                        <div class="dd-handle">10 Reasons to Stay Single!</div>
-                        <div class="dd-content">
-                          <div class="media">
-                            <span class="text-warning pull-right fs11 fw600">Article</span>
-                            <a class="media-left" href="#">
-                              <img data-src="holder.js/46x42" alt="holder-img">
-                            </a>
-                            <div class="media-body">
-                              <h4 class="media-heading">Frank Ocean
-                                <small class="text-muted">- 08/16/22</small>
-                              </h4>
-                              <p class="mb5">Last Updated 36 days ago by
-                                <a class="text-system" href="#"> Max </a>
-                              </p>
+          <div id="domains-list">
+            <ol class="domain-list">
+              <li class="domain-item">
+                <div class="domain-title">
+                 <a data-toggle="collapse" href="#domainsList" aria-expanded="false" aria-controls="domainsList"><span class="fa fa-plus"></span></a> extremefitness.org
+                  <span class="pull-right fs11 fw600">Approved</span>
+                </div>
+                <div id="domainsList" class="collapse">
+                  <ol class="campaign-list pb15">
+                    <li class="campaign-item">
+                      <div class="campaign-title">
+                        <a data-toggle="collapse" href="#campaignsList" aria-expanded="false" aria-controls="campaignsList"><span class="fa fa-plus"></span></a>Campaign 1
+                      </div>
+                      <div id="campaignsList" class="collapse">
+                        <ol class="lander-list pb15">
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
                             </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="dd-item" data-id="15">
-                        <div class="dd-handle">What Women Love</div>
-                        <div class="dd-content">
-                          <div class="media">
-                            <span class="text-warning pull-right fs11 fw600">Article</span>
-                            <a class="media-left" href="#">
-                              <img data-src="holder.js/46x42" alt="holder-img">
-                            </a>
-                            <div class="media-body">
-                              <h4 class="media-heading">Olivia White
-                                <small class="text-muted">- 08/16/22</small>
-                              </h4>
-                              <p class="mb5">Last Updated 36 days ago by
-                                <a class="text-system" href="#"> Max </a>
-                              </p>
+                          </li>
+                        </ol>
+                      </div>
+                    </li>
+                  </ol>
+                </div>
+              </li>
+              <li class="domain-item">
+                <div class="domain-title">
+                 <a data-toggle="collapse" href="#domainsList1" aria-expanded="false" aria-controls="domainsList1"><span class="fa fa-plus"></span></a> hardbodiesandboners.com
+                  <span class="pull-right fs11 fw600">Approved</span>
+                </div>
+                <div id="domainsList1" class="collapse">
+                  <ol class="campaign-list pb15">
+                    <li class="campaign-item">
+                      <div class="campaign-title">
+                        <a data-toggle="collapse" href="#campaignsList2" aria-expanded="false" aria-controls="campaignsList2"><span class="fa fa-plus"></span></a>Adult2 US camp
+                      </div>
+                      <div id="campaignsList2" class="collapse">
+                        <ol class="lander-list pb15">
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
                             </div>
-                          </div>
-                        </div>
-                      </li>
-                    </ol>
-                  </li>
-                  <li class="dd-item dd-info" data-id="16">
-                    <div class="dd-handle">Sports
-                      <span class="pull-right fs11 fw600">Active</span>
-                    </div>
-                    <ol class="dd-list pb15">
-                      <li class="dd-item" data-id="17">
-                        <div class="dd-handle">Camping trips for Girls</div>
-                        <div class="dd-content">
-                          <div class="media">
-                            <span class="text-warning pull-right fs11 fw600">Article</span>
-                            <a class="media-left" href="#">
-                              <img data-src="holder.js/46x42" alt="holder-img">
-                            </a>
-                            <div class="media-body">
-                              <h4 class="media-heading">Sara Downs
-                                <small class="text-muted">- 08/16/22</small>
-                              </h4>
-                              <p class="mb5">Last Updated 36 days ago by
-                                <a class="text-system" href="#"> Max </a>
-                              </p>
+                          </li>
+                        </ol>
+                      </div>
+                    </li>
+                    <li class="campaign-item">
+                      <div class="campaign-title">
+                        <a data-toggle="collapse" href="#campaignsList1" aria-expanded="false" aria-controls="campaignsList1"><span class="fa fa-plus"></span></a>Bone Dawg Camp3
+                      </div>
+                      <div id="campaignsList1" class="collapse">
+                        <ol class="lander-list pb15">
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
                             </div>
-                          </div>
-                          <div class="media br-t mt5 pt10">
-                            <a class="media-left hidden" href="#">
-                              <img data-src="holder.js/46x42" alt="holder-img">
-                            </a>
-                            <div class="media-body">
-                              <h4 class="media-heading">Attachments
-                                <span class="label label-xs label-success ml5">Updated</span>
-                              </h4>
-                              <p class="text-muted">
-                                <span class="fa fa-paperclip pr10"></span>The-Grand-Canyon_Cover.jpeg</p>
-                              <p class="text-muted mb5">
-                                <span class="fa fa-paperclip pr10"></span>military_vet_interview-questions.text</p>
+                          </li>
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
                             </div>
-                          </div>
-                        </div>
-                      </li>
-                    </ol>
-                  </li>
-                </ol>
-              </div>
-
+                          </li>
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
+                            </div>
+                          </li>
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
+                            </div>
+                          </li>
+                          <li class="lander-item">
+                              <div class="lander-title">Lander 1</div>
+                            <div class="lander-content">
+                            </div>
+                          </li>
+                        </ol>
+                      </div>
+                    </li>
+                  </ol>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
       </section>
+
       <!-- End: Content -->
 
     </section>
@@ -347,7 +344,7 @@
       <div class="sidebar-right-content nano-content p10">
         <div class="panel" id="p5">
           <div class="panel-heading">
-            <span class="panel-title">Nameservers</span>
+            <span class="panel-title">Domain Name Servers (DNS)</span>
           <span class="toggle_sidemenu_r panel-controls"><a href="#" class="panel-control-loader"></a><a href="#" class="panel-control-remove"></a></span></div>
           <div class="panel-body pn">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -387,36 +384,53 @@
     // Init Demo JS  
     Demo.init();
 
-    // Nestable Output
-    var updateOutput = function(e) {
-      var list = e.length ? e : $(e.target),
-        output = list.data('output');
-      if (window.JSON) {
-        output.val(window.JSON.stringify(list.nestable('serialize'))); //, null, 2));
-      } else {
-        output.val('JSON browser support required for this demo.');
-      }
-    };
 
-    // Init Nestable on list 3
-    $('#nestable-contextual').nestable({
-      group: 3
-    }).on('change', updateOutput);
+    // temp js to show usage.
+    $('#domainsList').on('show.bs.collapse', function() {
+      $('a[href="#domainsList"] span').addClass('fa-minus').removeClass('fa-plus');
+    });
 
-    // nestable serialized output functionality
-    updateOutput($('#nestable-contextual').data('output', $('#nestable-output3')));
-
-    // nestable menu functionality
-    $('#nestable-menu').on('change', function(e) {
-      var target = $(e.target),
-        action = target.data('action');
-      if (action === 'expand-all') {
-        $('.dd').nestable('expandAll');
-      }
-      if (action === 'collapse-all') {
-        $('.dd').nestable('collapseAll');
+    $('#domainsList').on('hidden.bs.collapse', function() {
+      if(!(($("#domainsList").attr("aria-expanded")  === "true"))) {
+        $('a[href="#domainsList"] span').addClass('fa-plus').removeClass('fa-minus');
       }
     });
+
+    $('#campaignsList').on('shown.bs.collapse', function() {
+      $('a[href="#campaignsList"] span').addClass('fa-minus').removeClass('fa-plus');
+    });
+
+    $('#campaignsList').on('hidden.bs.collapse', function() {
+      $('a[href="#campaignsList"] span').addClass('fa-plus').removeClass('fa-minus');
+    });
+
+     $('#domainsList1').on('show.bs.collapse', function() {
+      $('a[href="#domainsList1"] span').addClass('fa-minus').removeClass('fa-plus');
+    });
+
+    $('#domainsList1').on('hidden.bs.collapse', function() {
+      if(!(($("#domainsList1").attr("aria-expanded")  === "true"))) {
+        $('a[href="#domainsList1"] span').addClass('fa-plus').removeClass('fa-minus');
+      }
+    });
+
+    $('#campaignsList1').on('shown.bs.collapse', function() {
+      $('a[href="#campaignsList1"] span').addClass('fa-minus').removeClass('fa-plus');
+    });
+
+    $('#campaignsList1').on('hidden.bs.collapse', function() {
+      $('a[href="#campaignsList1"] span').addClass('fa-plus').removeClass('fa-minus');
+    });
+
+    $('#campaignsList2').on('shown.bs.collapse', function() {
+      $('a[href="#campaignsList2"] span').addClass('fa-minus').removeClass('fa-plus');
+    });
+
+    $('#campaignsList2').on('hidden.bs.collapse', function() {
+      $('a[href="#campaignsList2"] span').addClass('fa-plus').removeClass('fa-minus');
+    });
+
+    
 
   });
   </script>
