UI domain update deploy messages, introducing login page, login logic in marionette, various additions to library files

--- a/public/domains_page.html
+++ b/public/domains_page.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body class="sb-l-o sb-r-o">
+<body class="sb-l-o">
 
 
   <!-- Start: Main -->
@@ -53,8 +53,10 @@
      
       <ul class="nav navbar-nav navbar-right">
 				<li class="dropdown menu-merge">
+
           <a href="#" class="dropdown-toggle fw600" data-toggle="dropdown">
-          	<span class="hidden-xs pl15"> Michael .R </span>
+          	<i class="glyphicon glyphicon-user"></i>
+            <span class="hidden-xs pl5"> Michael .R </span>
             <span class="caret caret-tp hidden-xs"></span>
           </a>
           <ul class="dropdown-menu list-group dropdown-persist w250" role="menu">
@@ -246,23 +248,28 @@
         <div class="ph10">
             <ol class="domain-list">
               <li class="domain-item">
-              <a data-toggle="collapse" href="#domainsList" aria-expanded="false" aria-controls="domainsList">
-                <div class="domain-title">
-                  <span class="collapse-icon fa fa-plus"></span> extremefitness.org
-                  <span class="domain-controls">
-                    <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-success ml5">Deployed</span>
-                  </span>
-                  <small class="pull-right fs10 mr15">Last Deployed 8/26/15 at 2:34pm</small>
-                </div>
+                <a data-toggle="collapse" href="#domainsList" aria-expanded="false" aria-controls="domainsList">
+                  <div class="domain-title open_sidemenu_r">
+                      <span class="collapse-icon fa fa-plus"></span>
+                     extremefitness.org
+                    <span class="domain-controls">
+                      <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-success ml5">Deployed</span>
+                    </span>
+                    <small class="pull-right fs10 mr15">Last Deployed 8/26/15 at 2:34pm</small>
+                  </div>
                 </a>
+
                 <div id="domainsList" class="collapse">
                   <ol class="campaign-list pb15">
                     <li class="campaign-item">
                       <a data-toggle="collapse" href="#campaignsList" aria-expanded="false" aria-controls="campaignsList">
-                        <div class="campaign-title">
-                          <span class="collapse-icon fa fa-plus"></span>Campaign 1
+                        <div class="campaign-title open_sidemenu_r">
+                          <span class="collapse-icon fa fa-plus"></span>
+                          Campaign 1
                           <span class="campaign-controls">
-                            <i class="campaign-notification-label fa fa-circle text-success pull-right fs12 pr5"></i>
+                            <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-success ml5">
+                                <span title="Currently being deployed" class="fa fa-check"></span>
+                              </span>
                           </span>
                         </div>
                       </a>
@@ -280,26 +287,34 @@
                 </div>
               </li>
               <li class="domain-item">
-                <a data-toggle="collapse" href="#domainsList1" aria-expanded="false" aria-controls="domainsList1">
-                  <div class="domain-title">
-                    <span class="collapse-icon fa fa-plus"></span> hardbodiesandboners.com
-                    <span class="domain-controls">
-                      <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-warning ml5">Deploying...</span>
-                    </span>
-                    <small class="pull-right fs10 mr15">Last Deployed 8/26/15 at 2:34pm</small>
-                  </div>
-                </a>
+                  <a data-toggle="collapse" href="#domainsList1" aria-expanded="false" aria-controls="domainsList1">
+                    <div class="domain-title open_sidemenu_r">
+                      <span class="collapse-icon fa fa-plus"></span>
+                      hardbodiesandboners.com
+
+                      <span class="domain-controls">
+                        <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-warning ml5">
+                          <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+                        Deploying...</span>
+                      </span>
+                      <small class="pull-right fs10 mr15">Last Deployed 8/26/15 at 2:34pm</small>
+                    </div>
+                  </a>
                 <div id="domainsList1" class="collapse">
                   <ol class="campaign-list pb15">
                     <li class="campaign-item">
                       <a data-toggle="collapse" href="#campaignsList2" aria-expanded="false" aria-controls="campaignsList2">
-                        <div class="campaign-title">
-                          <span class="collapse-icon fa fa-plus"></span>Adult2 US camp
+
+                        <div class="campaign-title open_sidemenu_r">
+                          <span class="collapse-icon fa fa-plus"></span>
+                          Adult2 US camp
                           <span class="campaign-controls">
-                            <i class="campaign-notification-label fa fa-circle text-success pull-right fs12 pr5"></i>
+                            <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-success ml5">
+                                <span title="Currently being deployed" class="fa fa-check"></span>
+                              </span>
                           </span>
                         </div>
-                      </a>
+                        </a>
                       <div id="campaignsList2" class="collapse">
                         <ol class="lander-list pb15">
                           <li class="lander-item">
@@ -311,14 +326,17 @@
                       </div>
                     </li>
                     <li class="campaign-item">
-                      <a data-toggle="collapse" href="#campaignsList1" aria-expanded="false" aria-controls="campaignsList1">
-                        <div class="campaign-title">
-                          <span class="collapse-icon fa fa-plus"></span>Bone Dawg Camp3
-                          <span class="campaign-controls">
-                            <i class="campaign-notification-label fa fa-circle text-warning pull-right fs12 pr5"></i>
-                          </span>
-                        </div>
-                      </a>
+                        <a data-toggle="collapse" href="#campaignsList1" aria-expanded="false" aria-controls="campaignsList1">
+                          <div class="campaign-title open_sidemenu_r">
+                            <span class="collapse-icon fa fa-plus"></span>
+                            Bone Dawg Camp3
+                            <span class="campaign-controls">
+                              <span class="domain-notification-label fs11 fw600 pull-right label label-xs label-warning ml5">
+                                <span title="Currently being deployed" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+                              </span>
+                            </span>
+                          </div>
+                        </a>
                       <div id="campaignsList1" class="collapse">
                         <ol class="lander-list pb15">
                           <li class="lander-item">
@@ -370,7 +388,7 @@
       <div class="sidebar-right-content nano-content p10">
         <div class="panel" id="p5">
           <div class="panel-heading">
-            <span class="panel-title">Domain Name Servers (DNS)</span>
+            <span class="panel-title">Domain Information</span>
           <span class="toggle_sidemenu_r panel-controls"><a href="#" class="panel-control-loader"></a><a href="#" class="panel-control-remove"></a></span></div>
           <div class="panel-body pn">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
