added anchor view architecture, entry mechanism to start the app

--- a/server/index.html
+++ b/server/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <div id="main-region"></div>
+    <div id="root-region"></div>
     <script src="vendor/bower_installed/requirejs/require.js" data-main="assets/js/require_main.js"></script> 
     <!-- <script src="./js/vendor/require.js" data-main="js/require_main.built.js"></script>-->
   </body>
