fixed the routing so long routes work. ie: this/that/the/other

--- a/server/index.html
+++ b/server/index.html
@@ -14,16 +14,16 @@
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'>
 
   <!-- Theme CSS -->
-  <link rel="stylesheet" type="text/css" href="assets/skin/default_skin/css/theme.css">
+  <link rel="stylesheet" type="text/css" href="/assets/skin/default_skin/css/theme.css">
 
   <!-- Admin Forms CSS -->
-  <link rel="stylesheet" type="text/css" href="assets/admin-tools/admin-forms/css/admin-forms.css">
+  <link rel="stylesheet" type="text/css" href="/assets/admin-tools/admin-forms/css/admin-forms.css">
 
   <!-- Login Overrides -->
-  <link rel="stylesheet" type="text/css" href="assets/skin/overrides/login_overrides.css">
+  <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/login_overrides.css">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="assets/img/favicon.ico">
+  <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -34,7 +34,7 @@
   
   <body>
     <div id="root-region"></div>
-    <script src="vendor/bower_installed/requirejs/require.js" data-main="assets/js/require_main.js"></script> 
+    <script src="/vendor/bower_installed/requirejs/require.js" data-main="/assets/js/require_main.js"></script> 
     <!-- <script src="./js/vendor/require.js" data-main="js/require_main.built.js"></script>-->
   </body>
 
