update for landers list center design

--- a/server/index.html
+++ b/server/index.html
@@ -19,9 +19,13 @@
   <!-- Admin Forms CSS -->
   <link rel="stylesheet" type="text/css" href="/assets/admin-tools/admin-forms/css/admin-forms.css">
 
+ 
   <!-- Login Overrides -->
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/overrides.css">
   <link rel="stylesheet" type="text/css" href="/assets/skin/overrides/login_overrides.css">
+
+ <!-- Fancytree CSS -->
+  <link rel="stylesheet" type="text/css" href="/vendor/plugins/fancytree/skin-win8/ui.fancytree.min.css">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
